syntax = "proto3";

option go_package = "/grpc";


service BudgetService {
  rpc CreateBudget (CreateBudgetRequest) returns (CreateBudgetResponse);
  rpc GetBudgets (GetBudgetsRequest) returns (GetBudgetsResponse);
  rpc PutBudget (PatchBudgetRequest) returns (PatchBudgetResponse); 
}

message CreateBudgetRequest {
  string userId = 1;
  string category = 2;
  double amount = 3;
  string currency = 4;
  double spent = 5;
  string date = 6;
}

message CreateBudgetResponse {
  string message = 1;
  string budgetId = 2;
}

message GetBudgetsRequest {
  string userId = 1;
}

message Budget {
  string budgetId = 1;
  string userId = 2;
  string category = 3;
  double amount = 4;
  double spent = 5;
  string currency = 6;
  string date = 7;
}

message GetBudgetsResponse {
  repeated Budget budgets = 1;
}


message PatchBudgetRequest { 
  int32 budget_id = 1; 
  int64 amount = 2;                    
}

message PatchBudgetResponse { 
  string message = 1;
}
